--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
-nav a ,.Deals a{
-    text-decoration: none;
-    color: black;
-    padding: 15px 10px;
+nav a {
+    padding:  10px;
+    font-size: 10px;
 
 }
 
-nav ul :hover, .Deals ul :hover {
+nav ul :hover{
     background-color: hwb(34 55% 1%);
     border-radius: 5px;
     
@@ -19,10 +18,17 @@ list-style-type: none;
 display:flex;
 
 }
+a{
+    text-decoration: none;
+    color: black;
+}
 nav{
     background-color: antiquewhite;
     align-content: center;
     padding: 0;
+ }
+.center h2{
+    text-align: center;
 }
 .featured_photo img{
     width: 120px;
@@ -33,4 +39,22 @@ nav{
 
 #banner{
     width: 100%;
+}
+.special {
+    background-color: rgb(75, 156, 231);
+    padding: 15px 10px;
+    text-decoration: none;
+    margin: 10px;
+    max-width: 150px;
+    color: white;
+    text-align: center;
+}
+.special img {
+    width: 30px;
+}
+.special p{
+    font-size: 10px;
+}
+.special a{
+    color: white;
 }
