--- a/style.css
+++ b/style.css
@@ -3,7 +3,9 @@ nav a {
     font-size: 10px;
 
 }
-
+body{
+    text-align: center;
+}
 nav ul :hover{
     background-color: hwb(34 55% 1%);
     border-radius: 5px;
@@ -26,10 +28,8 @@ nav{
     background-color: antiquewhite;
     align-content: center;
     padding: 0;
- }
-.center h2{
-    text-align: center;
 }
+
 .featured_photo img{
     width: 120px;
     height: 120px;
