--- a/style.css
+++ b/style.css
@@ -41,12 +41,12 @@ nav{
     width: 100%;
 }
 .special {
-    background-color: rgb(75, 156, 231);
+    background-color: rgb(250, 244, 237);
     padding: 15px 10px;
     text-decoration: none;
     margin: 10px;
     max-width: 150px;
-    color: white;
+    color: rgb(0, 0, 0);
     text-align: center;
 }
 .special img {
@@ -56,5 +56,35 @@ nav{
     font-size: 10px;
 }
 .special a{
-    color: white;
+    color: rgb(0, 0, 0);
+}
+.recipe > img{
+    max-width: 150px;
+    max-height: 150px;
+   
+}
+.recipe{
+    margin:   0px 10px ;
+    padding: 20px;
+    background-color: rgb(250, 244, 237);
+    justify-content: center;
+    
+}
+.recepies{
+    display: flex;
+    gap: 10px;
+    margin: 50px auto;
+    justify-content: center;
+}
+.primary_button{
+    padding: 10px 10px;
+    background-color: rgb(255, 166, 0);
+    border: 2px SOLID  rgb(255, 166, 0);
+    border-radius: 5px;
+}
+.primary_button:hover{
+    background-color:  rgba(255, 166, 0, 0);
+    border: 2px solid  rgb(255, 166, 0);
+    color: rgb(255, 166, 0)
+ 
 }
