--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ nav a {
 }
 body{
     text-align: center;
+    margin: 0;
 }
 nav ul :hover{
     background-color: hwb(34 55% 1%);
@@ -68,12 +69,11 @@ nav{
     padding: 20px;
     background-color: rgb(250, 244, 237);
     justify-content: center;
-    
 }
 .recepies{
     display: flex;
     gap: 10px;
-    margin: 50px auto;
+    margin: 0px auto 20px;
     justify-content: center;
 }
 .primary_button{
@@ -86,5 +86,12 @@ nav{
     background-color:  rgba(255, 166, 0, 0);
     border: 2px solid  rgb(255, 166, 0);
     color: rgb(255, 166, 0)
- 
+}
+.section{
+    margin: 50px auto 0px ;
+}
+footer{
+    background-color: rgb(250, 244, 237) ;
+    padding: 200px;
+    margin: 0px;
 }
