--- a/style.css
+++ b/style.css
@@ -106,6 +106,30 @@ nav{
 }
 footer{
     background-color: rgb(250, 244, 237) ;
-    padding: 200px;
+    padding:50px  200px;
     margin: 0px;
+    display: flex;
+
+}
+.footer_section{
+    text-align: left;
+    margin: 0  40px;
+}
+.footer_sub_section{
+    display: flex;
+}
+h6{
+    margin:0 ;
+}
+.footer_links{
+    margin:0px 30px 0px  0;
+}
+.subscribe_button{
+background-color: orange;
+border:2px solid orange;
+margin: 0
+}
+.newsletter_subscription{
+    margin: 0;
+    display: flex;
 }
