--- a/style.css
+++ b/style.css
@@ -111,6 +111,13 @@ footer{
     display: flex;
 
 }
+.banner{
+    background-color: antiquewhite;
+    width: 100%;
+    height: 100px ;
+    padding: 120px 0px 50px;
+    
+}
 .footer_section{
     text-align: left;
     margin: 0  40px;
